--- a/index.html
+++ b/index.html
@@ -10,3 +10,8 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  </body>
